--- a/.config/i3/config
+++ b/.config/i3/config
@@ -203,9 +203,14 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
 # Remove windows title bar
 default_border pixel 1
 default_floating_border pixel 1
+
+# assigning windows to specific ws
+for_window [class="firefox"] move to workspace $ws2
+for_window [class="kitty"] move to workspace $ws1
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
