--- a/.config/i3/config
+++ b/.config/i3/config
@@ -212,6 +212,9 @@ default_floating_border pixel 1
 for_window [class="firefox"] move to workspace $ws2
 for_window [class="kitty"] move to workspace $ws1
 
+assign [class="VirtualBox Manager"] $ws3
+for_window [class="VirtualBox Machine"] move container to workspace $ws4
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #bar {
